# zynq-linux-build

./: CMakeLists.txt  CMakePresets.json  README.md  Toolchain-A9.cmake  env.sh
